--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.cinemachine": "2.9.5",
     "com.unity.inputsystem": "1.5.1",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "15.0.5",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.2",
